--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 </head>
 <body>
     <div class="dataSumDisplay">
-        <p id="sumNumber">A felvett bolygók száma: 0</p>
-        <p id="sumAge">A bolygók átlagos életkora: 0</p>
+        <p id="osszszam">A felvett bolygók száma: 0</p>
+        <p id="osszkor">A bolygók átlagos életkora: 0</p>
     </div>
     <form>
-        <label for="planetNameInput">Bolygó neve: </label><br>
-        <input type="text" name="planetNameInput" id="planetNameInput"><br>
-        <label for="planetAgeInput">Bolgyó életkora (év): </label><br>
-        <input type="number" name="planetAgeInput" id="planetAgeInput"><br>
-        <label for="planetSizeInput">Bolygó átmérője (km, legalább 1500): </label><br>
-        <input type="number" name="planetSizeInput" id="planetSizeInput"><br>
-        <label for="planetWaterContentInput">Bolygót borítú vízfelület aránya (%): </label><br>
-        <input type="number" name="planetWaterContentInput" id="planetWaterContentInput"><br>
-        <button type="submit" id="submitButton">Bolygó rögzítése</button>
-        <div id="errorContainer"></div>
+        <label for="bolygonevinput">Bolygó neve: </label><br>
+        <input type="text" name="bolygonevinput" id="bolygonevinput"><br>
+        <label for="bolygokorinput">Bolgyó életkora (év): </label><br>
+        <input type="number" name="bolygokorinput" id="bolygokorinput"><br>
+        <label for="bolygomeretinput">Bolygó átmérője (km, legalább 1500): </label><br>
+        <input type="number" name="bolygomeretinput" id="bolygomeretinput"><br>
+        <label for="bolygovizinput">Bolygót borítú vízfelület aránya (%): </label><br>
+        <input type="number" name="bolygovizinput" id="bolygovizinput"><br>
+        <button type="submit" id="gomb">Bolygó rögzítése</button>
+        <div id="hibakdiv"></div>
     </form>
 </body>
 </html>
